fix for footer icon, guide container shifted down, changed size of care container

--- a/scss/care-content.scss
+++ b/scss/care-content.scss
@@ -5,7 +5,9 @@
 }
 
 .care-content-block__text {
-  padding: 136px 0 180px;
+  position: relative;
+  bottom: 200px;
+  padding: 436px 0 180px;
   font-size: 80px;
   color: var(--cWhite);
   font-weight: 700;
