--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -32,7 +32,7 @@
   gap: 15px;
 
   @media screen and (min-width: 1201px) {
-    align-self: end;
+    align-self: flex-end;
   }
 
   a {
