--- a/scss/guide-content.scss
+++ b/scss/guide-content.scss
@@ -5,11 +5,12 @@
 }
 
 .guide-content-block {
+  position: relative;
+  top: 30px;
   width: 100%;
   max-width: 1400px;
-  margin-top: 100px;
+  margin-top: 60px;
   background-color: #f3f3f3;
-  padding-bottom: 90px;
 
   @media screen and (max-width: 1023px) {
     margin: 30px 0;
@@ -18,11 +19,11 @@
 }
 
 .section__title {
-  padding-top: 30px;
+  padding: 30px 30px 0 30px;
   color: #f60c4d;
+  justify-content: left;
   font-size: 70px;
   align-items: center;
-  text-align: center;
 
   @media screen and (max-width: 1023px) {
     font-size: 30px;
@@ -30,10 +31,10 @@
 }
 
 .articles {
-  padding: 0 110px;
+  padding: 0 30px;
   display: flex;
   justify-content: space-between;
-  margin-top: 60px;
+  margin-top: 50px;
   gap: 100px;
 
   @media screen and (max-width: 1200px) {
@@ -58,7 +59,7 @@
 .articles__title {
   align-items: center;
   justify-content: center;
-  font-size: 50px;
+  font-size: 40px;
   color: #f60c4d;
   margin-bottom: 30px;
 
@@ -71,7 +72,7 @@
 }
 
 .articles__text {
-  font-size: 30px;
+  font-size: 27px;
   color: #595959;
 
   @media screen and (max-width: 1023px) {
